--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -68,6 +68,7 @@
             app:bt_colorInactive="@color/white"
             app:bt_shape="@drawable/navigation_bg"
             app:bt_title="Movies"
+            app:bt_icon="@drawable/ic_movie"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/bottomNavigationContainer"
@@ -82,6 +83,7 @@
             app:bt_colorInactive="@color/white"
             app:bt_shape="@drawable/navigation_bg"
             app:bt_title="Favorite"
+            app:bt_icon="@drawable/ic_favorite_true"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/bottomNavigationContainer"
