--- a/core/src/main/res/layout/list_item_movie.xml
+++ b/core/src/main/res/layout/list_item_movie.xml
@@ -25,11 +25,14 @@
 
         <TextView
             android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Title"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:textColor="@color/colorText"
             app:layout_constraintStart_toEndOf="@+id/imgViewMovie"
             app:layout_constraintTop_toTopOf="@id/imgViewMovie"
             android:layout_marginTop="15dp"
@@ -37,10 +40,13 @@
         
         <TextView
             android:id="@+id/tvDirector"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Director"
             android:textSize="16sp"
+            android:textColor="@color/colorText"
+            android:maxLines="2"
+            android:ellipsize="end"
             app:layout_constraintStart_toStartOf="@+id/tvTitle"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             android:layout_marginTop="10dp"/>
@@ -70,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="hours"
+            android:textColor="@color/colorText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ratingBar"/>
 
