--- a/core/src/main/res/values/string.xml
+++ b/core/src/main/res/values/string.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="baseUrlImage">http://image.tmdb.org/t/p/w500%s</string>
+    <string name="imageviewmovie">Image View Movie</string>
+    <string name="title">Title</string>
+    <string name="overview">Overview</string>
+    <string name="release">Release</string>
 </resources>
