--- a/favorite/src/main/res/layout/fragment_favorite.xml
+++ b/favorite/src/main/res/layout/fragment_favorite.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".favorite.FavoriteFragment"
-    android:background="@color/secondaryColor">
+    tools:context=".favorite.FavoriteFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFavorite"
